--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && npm run server",
     "server": "cd server && nodemon server.js",
     "build": "cd client && npm run build",
-    "install": "concurrently \"npm install\" \"cd client && npm install\"",
+    "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
     "client": "cd client && npm start"
   },
   "keywords": [],
